#239 - Upgrade to Spring Data Moore snapshots.
Make use of improved APIs on Streamable for convenience.